# tfl_interp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  cpuinfo_fa1c.patch  gemmlowp_16e8.patch  mix.exs  msys2.patch  msys2.patch1  msys2.patch2  tensorflow_2_18_0_lite.patch  toolchain_aarch64.cmake  toolchain_armv6.cmake  toolchain_armv7neon.cmake
demo_ResNet18/: Resnet18.livemd  mix.exs
demo_ResNet18/lib/: demo_r18.ex
demo_StyleGAN2-ADA/: Export_StyleGAN2_ADA(afhqdog).ipynb  StyleGAN2ADA.livemd  mix.exs
demo_StyleGAN2-ADA/lib/: demo_stylegan2ada.ex  stylegan2ada.ex
demo_StyleGAN2-ADA/lib/demo_stylegan2ada/: application.ex
demo_bert_qa/: mix.exs
demo_bert_qa/lib/: mbert_qa.ex
demo_bert_qa/lib/mbert_qa/: application.ex  tokenizer.ex
demo_candy/: Candy.livemd  mix.exs
demo_candy/lib/: candy.ex  demo_candy.ex
demo_candy/lib/demo_candy/: application.ex
demo_deepfillv2/: DeepFillV2.livemd  Export_DeepFillv2_tflite.ipynb  mix.exs
demo_deepfillv2/lib/: deepfillv2.ex  demo_deepfillv2.ex
demo_deepfillv2/lib/demo_deepfillv2/: application.ex
demo_hairsegmentation/: HairSegmentation.livemd  mix.exs
demo_hairsegmentation/lib/: demo_hairsegmentation.ex  hairsegmentation.ex
demo_hairsegmentation/lib/demo_hairsegmentation/: application.ex
demo_livebook/: semantic_segmentation_for_self_driving_cars_unet.md
demo_mbert_qa/: mbert_qa.livemd  mix.exs  passage.txt
demo_mbert_qa/lib/: mbert_qa.ex
demo_mbert_qa/lib/mbert_qa/: application.ex  demo_mbert_qa.ex  feature.ex
demo_midas/: Midas.livemd  mix.exs
demo_midas/lib/: demo_midas.ex  midas.ex
demo_midas/lib/demo_midas/: application.ex
demo_mnist/: mix.exs
demo_mnist/lib/: router.ex  tfl_mnist.ex
demo_mnist/lib/tfl_mnist/: application.ex
demo_mnist/priv/static/: index.html
demo_mnist/priv/static/css/: app.css
demo_mnist/priv/static/js/: app.js
demo_movenet/: MoveNet.livemd  mix.exs
demo_movenet/lib/: demo_movenet.ex  movenet.ex
demo_movenet/lib/demo_movenet/: application.ex
demo_stylegan2ADA/: Export_StyleGAN2_ADA_Idol_face.ipynb  StyleGAN2ADA.livemd  mix.exs
demo_stylegan2ADA/lib/: demo_stylegan2ada.ex  stylegan2ada.ex
demo_tflite/lib/: demo_r18.ex
demo_whisper/: convert_huggingface_whisper_to_tflite.ipynb  mix.exs
demo_whisper/lib/: demo_whisper.ex  whisper.ex
demo_whisper/lib/demo_whisper/: application.ex
demo_yolov4/: YOLOv4.livemd  get-yolov4-onnx.ipynb  mix.exs
demo_yolov4/lib/: demo_yolov4.ex  yolov4.ex
demo_yolov4/lib/demo_yolov4/: application.ex
demo_yolox/: YoloX.livemd  mix.exs
demo_yolox/lib/: demo_yolox.ex  yolox.ex
demo_yolox/lib/demo_yolox/: application.ex
lib/: tfl_interp.ex
lib/mix/tasks/: cmake.ex
lib/mix/tasks/cmake/: getopt.ex
lib/tfl_interp/: pre_compiled.ex  url.ex
src/: io_port.cc  main.cc  nonmaxsuppression.cc  postprocess.h  tensor_spec.cc  tensor_spec.h  tfl_interp.cc  tfl_interp.h  tfl_nonmaxsuppression.cc  tfl_postprocess.h  tiny_ml.cc  tiny_ml.h
src/custom_ops/: custom_operations.cc  extract_image_patches.cc  extract_image_patches.h  max_pool_argmax.cc  max_pool_argmax.h  max_unpooling.cc  max_unpooling.h  transpose_conv_bias.cc  transpose_conv_bias.h
test/: model.tflite  tfl_interp_test.exs
test_eip/: mix.exs
test_eip/lib/: test_eip.ex
test_eip/lib/test_eip/: application.ex
test_eip/model/: mk_test_eip.py
